<resources>
    <string name="app_name">Repository Buku</string>
    <string name="dosen">DOSEN</string>
    <string name="materi">MATERI</string>
    <string name="tugas_akhir">TUGAS AKHIR</string>
    <string name="skripsi">SKRIPSI</string>
    <string name="pendaftaran">PENDAFTARAN</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="daftar">DAFTAR</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="judul_skripsi">Judul Skripsi</string>
    <string name="abstrak">Abstrak</string>
    <string name="studikasus">Studi Kasus</string>
    <string name="pembimbingdua">Pembimbing Dua</string>
    <string name="pembimbingsatu">Pembimbing Satu</string>
    <string name="nama_file_pdf">Nama File PDF</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="detail">Detail</string>
    <string name="tanggal_skripsi">Tanggal Skripsi</string>
    <string name="tanggal_tugasakhir">Tanggal Tugas Akhir</string>
    <string name="judul_kp">Judul Kerja Praktek</string>
    <string name="tanggal_kp">Tanggal KP</string>
    <string name="judul_tugas_akhir">Tugas Akhir</string>
    <string name="kpd3">KP D3</string>
    <string name="kps1">KP S1</string>
    <string name="biodata">Biodata Diri</string>
    <string name="nim">NIM</string>
    <string name="status">Genre</string>
    <string name="pria">Pria</string>
    <string name="dipinjam">Wanita</string>
    <string name="no">Nomor HP</string>
    <string name="pilih_gambar">Choose</string>
    <string name="Simpan">Save</string>
    <string name="Update">Update</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading…</string>
    <string name="nipdosen">NIP</string>
    <string name="alamat">Alamat</string>
    <string name="s1">S1</string>
    <string name="d3">D3</string>
    <string name="jurusan">Jurusan</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
</resources>
