<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form_Profil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/biodata"
                android:textSize="20sp"
                android:textAlignment="center"
                />
            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="2dp"
                android:layout_margin="3dp"
                android:background="#0F0E0E"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/namalengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/namalengkap"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/nim"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nim"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/status"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    />
                <RadioGroup
                    android:id="@+id/kateg_gender"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/pria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pria"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/wanita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dipinjam"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:gravity="top"
                    android:id="@+id/nomorhp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnChoose"
                        android:text="@string/pilih_gambar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnSave"
                        android:text="@string/Simpan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btnUpdate"
                        android:text="@string/Update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>