<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/book"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pendaftaran"
            android:textColor="@color/Putih"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/namalengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namalengkap"
            android:textColorHint="@color/Putih"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:textColor="@color/Putih"
            android:alpha="0.8"/>
        <EditText
            android:id="@+id/inputemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/Putih"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/Putih"
            android:alpha="0.8"/>
        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/Putih"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:textColor="@color/Putih"
            android:alpha="0.8"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <Button
                android:id="@+id/btndaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textColor="@color/Putih"
                android:background="@color/LightBlue"
                android:layout_marginTop="15dp"
                android:padding="12dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>