<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="0dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:id="@+id/gambarmahasiswa"
                android:src="@drawable/pdf"/>

            <TextView
                android:id="@+id/judultugasakhir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginEnd="81dp"
                android:layout_toEndOf="@+id/gambarmahasiswa"
                android:text="@string/judul_tugas_akhir"
                android:textIsSelectable="true"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="3dp"
                android:layout_below="@+id/judultugasakhir"
                android:layout_toRightOf="@+id/gambarmahasiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studikasus"
                android:textStyle="bold"
                android:textSize="12dp"
                android:layout_marginLeft="7dp"
                android:id="@+id/tvstudikasus"/>

            <TextView
                android:id="@+id/tvabstrak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvstudikasus"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/gambarmahasiswa"
                android:gravity="center_vertical"
                android:text="@string/abstrak"
                android:maxLength="100"
                android:textSize="12sp" />
            <View
                android:id="@+id/viewgaris"
                android:layout_below="@+id/tvabstrak"
                android:layout_toRightOf="@+id/gambarmahasiswa"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@color/colorPrimary" />
            <TextView
                android:id="@+id/tvdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewgaris"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/gambarmahasiswa"
                android:gravity="center_vertical"
                android:text="@string/detail"
                android:textColor="@color/LightBlue"
                android:textStyle="bold"
                android:maxLength="100"
                android:textSize="10sp" />

            <ImageView
                android:layout_marginLeft="6dp"
                android:id="@+id/btndownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
